<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_sites_apps"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp_30"
        android:id="@+id/text"
        android:textStyle="bold"
        android:layout_margin="@dimen/sp_30"/>
    <Button
        android:id="@+id/btnWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sp_10"
        android:text="@string/open_website"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text"/>
    <Button
        android:id="@+id/btnDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnWebsite"
        android:layout_margin="@dimen/dp_10"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/sp_10"
        android:text="@string/dial_number"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnSms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDial"
       android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/sms"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnSms"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"
        android:id="@+id/btnEmail"
        android:layout_margin="@dimen/dp_10"/>
</RelativeLayout>